updating the with Ai generated course

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,1 +1,3 @@
-* xref:index.adoc[]
+* xref:index.adoc[Introduction]
+* xref:architecture.adoc[Pipeline Architecture]
+* xref:prerequisites.adoc[Prerequisites]
